# kairo

./: .gitignore  Cargo.toml  README.md  diesel.toml
kairo-cli/: Cargo.toml
kairo-cli/src/: cli.rs  lib.rs  main.rs
kairo-core/: Cargo.toml
kairo-core/migrations/2025-05-02-124857_create_notes/: up.sql
kairo-core/migrations/2025-05-02-125206_create_note_tags/: down.sql
kairo-core/migrations/2025-05-09-020755_create_linked_notes/: down.sql  up.sql
kairo-core/migrations/2025-05-15-155037_create_project_tags/: down.sql  up.sql
kairo-core/migrations/2025-05-15-162653_create_task_tags/: down.sql  up.sql
kairo-core/src/: lib.rs
kairo-core/src/config/: config.rs
kairo-core/src/interface/: markdown.rs
kairo-core/src/markdown/: mod.rs  note.rs  project.rs  task.rs
kairo-core/src/model/: linked_note.rs  note.rs  project.rs  tag.rs  task.rs
kairo-core/src/store/: linked_note.rs  note.rs  note_tag.rs  project.rs  project_tag.rs  task.rs  task_tag.rs
kairo-core/src/usecase/: note.rs  project.rs  task.rs
kairo-core/src/util/: display.rs  markdown.rs  mod.rs
migrations/2025-04-29-163421_create_tags/: up.sql
migrations/2025-04-29-163706_create_tasks/: up.sql
migrations/2025-04-29-164237_create_note_tags/: up.sql
migrations/2025-05-02-124937_create_projects/: up.sql
migrations/2025-05-02-125101_create_tags/: up.sql
src/: cli.rs  lib.rs  main.rs  schema.rs
src/commands/: mod.rs  note.rs  project.rs  task.rs
src/config/: config.rs
src/frontmatters/: mod.rs  note.rs  project.rs  task.rs
src/handler/: linked_note.rs  note.rs  project.rs  tag.rs  (+1 more)
(+71 files in other folders)
